--- a/zorroCulpeo.html
+++ b/zorroCulpeo.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="zorroCulpeo.css" />
+    <link rel="shortcut icon" href="PATA.ico">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="template/MultiLevelMenu-master/css/component.css" />
     <link rel="stylesheet" type="text/css" href="template/MultiLevelMenu-master/css/demo.css" />
@@ -22,7 +23,7 @@
                 <a href="Main.html"> volver a WikiZooChile</a>
             </p>
             <p>
-                <a href="Animal.html"> volver a Terrestres</a>
+                <a href="Animal.html"> volver a Animales</a>
             </p>
             <p>
             <h1>El Zorro Culpeo</h1>
@@ -37,10 +38,10 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="FotoZorro" src="img/ZorroCulpeo1.jpg" alt="First slide">
+                        <img class="FotoZorro" src="img/ZorroCulpeo2.jpg" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="FotoZorro2" src="img/ZorroCulpeo2.jpg" alt="Second slide">
+                        <img class="FotoZorro2" src="img/ZorroCulpeo4.jpg" alt="Second slide">
                     </div>
                     <div class="carousel-item">
                         <img class="FotoZorro3" src="img/ZorroCulpeo3.jpg" alt="Third slide">
@@ -56,13 +57,13 @@
                 </a>
             </div>
 
-            <p>Lycalopex culpaeus, conocido como zorro culpeo, raposa colorada o zorro colorado (norte de Ecuador) es el
-                segundo
-                cánido viviente más grande de Sudamérica, solo superado por el lobo de crin o aguará guazú. </p>
+
             <p>
 
             <h1>Descripcion</h1>
-            <p>Tanto las patas como la cabeza son rojizas; el vientre, cuello y boca, blancos; y el lomo, gris rayado de
+            <p>Lycalopex culpaeus, conocido como zorro culpeo, raposa colorada o zorro colorado (norte de Ecuador) es el
+                segundo
+                cánido viviente más grande de Sudamérica, solo superado por el lobo de crin o aguará guazú. Tanto las patas como la cabeza son rojizas; el vientre, cuello y boca, blancos; y el lomo, gris rayado de
                 negro.
                 La cola está muy poblada de pelos grises, los cuales se tornan negros hacia la punta. Los especímenes de
                 la zona
