--- a/guanaco.html
+++ b/guanaco.html
@@ -26,7 +26,7 @@
                 <a href="Animal.html"> volver a Animales</a>
             </p>
             <p>
-            <h1>El Huemul</h1>
+            <h1>El Guanaco</h1>
             </p>
         </header>
         <section>
@@ -38,13 +38,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="FotoHuemul" src="img/Huemul2.jpg" alt="First slide">
+                        <img class="FotoGuanaco" src="img/Guanaco2.jpg" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="FotoHuemul2" src="img/Huemul4.jpg" alt="Second slide">
+                        <img class="FotoGuanaco2" src="img/Guanaco3.jpg" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="FotoHuemul3" src="img/Huemul3.jpg" alt="Third slide">
+                        <img class="FotoGuanaco3" src="img/Guanaco4.jpg" alt="Third slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -58,23 +58,37 @@
             </div>
             <p>
             <h1>Descripcion</h1>
-            <p>El huemul, güemul (del mapudungun wümul)​ o ciervo sur andino (Hippocamelus bisulcus), es un mamífero en peligro de extinción perteneciente a la familia Cervidae que habita en la cordillera de los Andes de Chile aproximadamente en un 75 % a nivel poblacional, y Argentina en un 25 %.
-                Es el cérvido más austral del planeta. Su población en el siglo XX ha sido (como otras especies silvestres) drásticamente exterminada por los seres humanos, ya sea por considerarlo "plaga" o por "deporte", como uno de los objetivos de la llamada caza mayor. De este modo, a inicios del siglo XXI, de los millares que había en la Patagonia, quedan menos de 1000
-                El huemul, como su pariente filogenético, la taruca, tiene un cuerpo rechoncho, robusto y patas cortas. Alcanza un tamaño de hasta 165 cm de longitud y hasta 170 cm de altura contando las astas, 
-                siendo las hembras un poco más pequeñas que los machos. Su pelaje es grueso, denso y de color beige o café oscuro, según la época del año. Sus orejas y su cola, miden entre 
-                10 y 20 cm de largo. Los machos poseen un par de astas bifurcadas que pueden alcanzar hasta 30 cm de longitud. Su peso ronda entre los 40 y 100 kg. Es un animal herbívoro, que se 
-                alimenta principalmente de arbustos, hierbas y brotes de árboles, como también de líquenes que encuentra entre las rocas, en los altos picos.</p>
+            <p>El guanaco (Lama guanicoe) es una especie de mamífero artiodáctilo de la familia
+                Camelidae propia de América del Sur.
+                Es un animal salvaje, en oposición a la llama (Lama glama) que es doméstica.
+                Es de huesos finos, con una altura aproximada de 1,60 metros y cerca de 91 kilogramos de peso.
+                Los guanacos jóvenes son llamados chulengos.
+                Su nombre proviene del quechua, wanaku.
+                Es uno de los pocos mamíferos que pueden beber agua salada sin ningún problema.</p>
             </p>
             <p>
             <h1>Hábitat</h1>
-            <p>Los huemules viven en pequeños grupos de dos a tres animales; estos grupos son constituidos por una hembra y sus crías. Pero también hay ejemplares que llevan vidas solitarias. En el siglo XVI, los huemules habitaban la región del sudoeste de Sudamérica, a partir del paralelo 34ºS (Centro Oeste de la Provincia de Mendoza en la Argentina y la Región Metropolitana en Chile) hasta el estrecho de Magallanes. A fines del siglo XIX, debido al retroceso de su área de expansión, el número de individuos de esta especie comenzó a disminuir drásticamente, quedando a fines del siglo XX, algunos centenares de ejemplares en el bosque andino patagónico o subantártico, ubicado al sur del paralelo 38ºS (esto es, al sur de la región de La Araucanía, en Chile, y al suroeste de la provincia del Neuquén, en Argentina).</p>
+            <p>Su distribución sufrió una retracción del 75 %. Goza de protección en varias reservas naturales,
+                como por ejemplo en el parque nacional Torres del Paine</p>
             </p>
             <p>
-                <h1>Conservacion</h1>
-                <p>Estos ciervos ahora están protegidos en trece parques nacionales de Chile y seis de la Argentina, y ha estado clasificado como una especie en peligro de extinción desde 1976. Se considera en esa situación principalmente por consecuencia de la acción humana: la deforestación, fragmentación de hábitat por la construcción de caminos y carreteras, introducción de animales no autóctonos como el ganado o el ciervo rojo y la caza furtiva. Lamentablemente, sus poblaciones están cada vez más reducidas y aisladas.
-    
-                    El huemul fue declarado monumento natural nacional en Argentina el 25 de septiembre de 1996 al sancionarse la ley n.º 24702,5​6​ junto con la taruca (Hippocamelus antisensis). Es además monumento natural provincial en Neuquén (ley n.º 2696 sancionada el 28 de abril de 20107​), Río Negro (ley n.º 2646 sancionada el 17 de junio de 19938​), Chubut (ley n.º 4793 sancionada el 6 de diciembre de 20019​) y Santa Cruz (ley n.º 2103 sancionada el 16 de agosto de 198910​).11​ Se encuentra protegido en los parques nacionales Nahuel Huapi (provincias de Neuquén y Río Negro), Lago Puelo y Los Alerces (provincia de Chubut), Perito Moreno y Los Glaciares (provincia de Santa Cruz).6​En 2013 existe en Argentina el proyecto de crear el parque nacional Lago La Plata (en la región occidental y andina de la provincia de Chubut) cuyo máximo objetivo es proteger y recuperar la población de huemules en la cuenca del lago La Plata.
+            <h1>Reproducción</h1>
+            <p>La época de celo ocurre entre noviembre y febrero. Los machos se tornan entonces agresivos y luchan entre
+                sí por las hembras. Después de once meses de gestación nace una sola cría. Su sistema de apareamiento
+                es poligínico.
+
+                Guanacos vive en un grupo familiar que tiene un macho adulto, varias hembras adultas, y bebés de menos
+                de un año.
+
+                Las hembras esperan a quedar embarazadas hasta qué condiciones ambientales están buenas. Dan a luz cada
+                dos años a un chulengo durante los meses de verano. La gestación es de once meses. Solo 30% de los
+                chulengos nacidos en la naturaleza sobreviven hasta edad adulta.
+
             </p>
+            <p>
+                <h1>Lana de guanaco</h1>
+                <p>La lana de guanaco está muy valorada en el mercado internacional y es apreciada por su suavidad y calidez. Aunque algunos guanacos viven en cautiverio con el fin de producir lana, los esfuerzos por capturar, esquilar, y liberar guanacos silvestres han aumentado rápidamente desde que comenzaron estas iniciativas a fines de la década de 1990. La demanda de esquila del guanaco está creciendo y Argentina produce ahora 150 kg de lana de guanaco al año. La lana de guanaco se considera más fina que la de alpaca pero más tosca que vicuña.</p>
+                </p>
             </p>
         </section>
     </div>
