actualizacion de pag que no se usan

--- a/Animal.html
+++ b/Animal.html
@@ -47,7 +47,7 @@
 			</div>
 		</nav>
 		<div class="content">
-			<p class="info">Escoga un animal</p>
+			<p class="info">Escoga una categoria</p>
 			<!-- Ajax loaded content here -->
 		</div>
 	</div>
