--- a/zorroCulpeo.html
+++ b/zorroCulpeo.html
@@ -19,6 +19,7 @@
 <body>
     <div class="container">
         <header>
+            
             <p>
                 <a href="Main.html"> volver a WikiZooChile</a>
             </p>
@@ -63,7 +64,8 @@
             <h1>Descripcion</h1>
             <p>Lycalopex culpaeus, conocido como zorro culpeo, raposa colorada o zorro colorado (norte de Ecuador) es el
                 segundo
-                cánido viviente más grande de Sudamérica, solo superado por el lobo de crin o aguará guazú. Tanto las patas como la cabeza son rojizas; el vientre, cuello y boca, blancos; y el lomo, gris rayado de
+                cánido viviente más grande de Sudamérica, solo superado por el lobo de crin o aguará guazú. Tanto las
+                patas como la cabeza son rojizas; el vientre, cuello y boca, blancos; y el lomo, gris rayado de
                 negro.
                 La cola está muy poblada de pelos grises, los cuales se tornan negros hacia la punta. Los especímenes de
                 la zona
