--- a/cisne.html
+++ b/cisne.html
@@ -21,7 +21,7 @@
                     <a href="Main.html"> volver a WikiZooChile</a>
                 </p>
                 <p>
-                    <a href="Animal.html"> volver a Aves</a>
+                    <a href="Animal.html"> volver a Animales</a>
                 </p>
                 <p>
                     <h1>El Cisne de Cuello Negro</h1>
