--- a/chuncho.html
+++ b/chuncho.html
@@ -22,7 +22,7 @@
                 <a href="Main.html"> volver a WikiZooChile</a>
             </p>
             <p>
-                <a href="Animal.html"> volver a Aves</a>
+                <a href="Animal.html"> volver a Animales</a>
             </p>
             <p>
             <h1>El Chuncho</h1>
@@ -37,13 +37,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="FotoChuncho1" src="img/chuncho1.jpg" alt="First slide">
+                        <img class="FotoChuncho1" src="img/chuncho3.jpg" alt="First slide">
                     </div>
                     <div class="carousel-item">
                         <img class="FotoChuncho2" src="img/chuncho2.jpg" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="FotoChuncho3" src="img/chuncho3.jpg" alt="Third slide">
+                        <img class="FotoChuncho3" src="img/chuncho1.jpg" alt="Third slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
