--- a/diuca.html
+++ b/diuca.html
@@ -21,11 +21,9 @@
                     <a href="Main.html"> volver a WikiZooChile</a>
                 </p>
                 <p>
-                    <a href="Animal.html"> volver a Aves</a>
+                    <a href="Animal.html"> volver a Animales</a>
                 </p>
                 <p>
-                    <h1> Diuca Diuca</h1>
-                </p>
             </header>
         <section>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -55,7 +53,7 @@
                 </a>
             </div>
                 <h1>Descripción</h1>
-                <p>La diuca común o simplemente diuca (Diuca diuca)6​ es una especie de ave paseriforme de la familia Thraupidae, en la actualidad la única perteneciente género Diuca. Es nativa del Cono Sur de América del Sur.
+                <p>La diuca común o simplemente diuca (Diuca diuca)​ es una especie de ave paseriforme de la familia Thraupidae, en la actualidad la única perteneciente género Diuca. Es nativa del Cono Sur de América del Sur.
                     Se distribuye como residente reproductivo desde el noroeste de Argentina (una población más al norte, en el sur de Bolivia) y norte de Chile (Antofagasta), hacia el sur (por el oeste y toda la Patagonia) hasta el sur de Argentina (sur de Santa Cruz) y sur de Chile (hasta el estrecho de Magallanes). En los inviernos australes algunas migran hacia el este de Argentina, oeste de Uruguay llegando hasta el extremo suroeste de Brasil (Río Grande do Sul).​
                 </p>
             </p>
