--- a/condor.html
+++ b/condor.html
@@ -21,11 +21,9 @@
                 <a href="Main.html"> volver a WikiZooChile</a>
             </p>
             <p>
-                <a href="Animal.html"> volver a Aves</a>
+                <a href="Animal.html"> volver a Animales</a>
             </p>
             <p>
-                <h1>El Cóndor</h1>
-            </p>
         </header>
             <section>
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -36,13 +34,13 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="FotoCondor" src="img/condor1.jpg" alt="First slide">
+                            <img class="FotoCondor" src="img/condor3.jpg" alt="First slide">
                         </div>
                         <div class="carousel-item">
                             <img class="FotoCondor2" src="img/condor2.jpg" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="FotoCondor3" src="img/condor3.jpg" alt="Third slide">
+                            <img class="FotoCondor3" src="img/condor1.jpg" alt="Third slide">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
