--- a/chincol.html
+++ b/chincol.html
@@ -36,13 +36,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="FotoChincol1" src="img/Chincol.jpg" alt="First slide">
+                        <img class="FotoChincol1" src="img/Chincol3.jpg" alt="First slide">
                     </div>
                     <div class="carousel-item">
                         <img class="FotoChincol2" src="img/chincol2.jpg" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="FotoChincol3" src="img/chincol3.jpg" alt="Third slide">
+                        <img class="FotoChincol3" src="img/Chincol.jpg" alt="Third slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
