--- a/Main.html
+++ b/Main.html
@@ -26,7 +26,7 @@
                 <div class="main clearfix">
                     <div class="column">
                         <p><button id="showMenu">Mostrar Menu</button></p>
-                        <p>Haga clic en este botón para ver el contenido en 3D y para revelar una navegación u otros elementos.</p>
+                        <p>Haga clic en este botón para revelar la navegación u otros elementos.</p>
                     </div>
                     <div class="column">
                         <nav class="codrops-demos">
@@ -40,8 +40,8 @@
         <nav class="outer-nav left vertical">
 				<a href="Animal.html">Animales</a>
 				<a href="Informacion.html">Informacion</a>
-				<a href="Subir.html">Subir</a>
-				<a href="Nosotros.html">Nosotros</a>
+				<a href="Subir.html">Registrate</a>
+				
 			</nav>
     </div>  
     <script src="template/PerspectivePageViewNavigation/js/classie.js"></script>
