--- a/Main2.html
+++ b/Main2.html
@@ -25,7 +25,7 @@
 					<div class="main clearfix">
 						<div class="column">
 							<p><button id="showMenu">Mostrar Menu</button></p>
-							<p>Haga clic en este botón para ver el contenido en 3D y para revelar una navegación u otros elementos.</p>
+							<p>Haga clic en este botón para revelar la navegación u otros elementos.</p>
 						</div>
 						<div class="column">
 							<nav class="codrops-demos">
@@ -39,8 +39,7 @@
 			<nav class="outer-nav right vertical">
 				<a href="Animal.html">Animales</a>
 				<a href="Informacion.html">Informacion</a>
-				<a href="Subir.html">Subir</a>
-				<a href="Nosotros.html">Nosotros</a>
+				<a href="Subir.html">Registrate</a>
 			</nav>
 		</div><!-- /perspective -->
 		<script src="template/PerspectivePageViewNavigation/js/classie.js"></script>
