--- a/chincol.html
+++ b/chincol.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="chincol.css" />
+    <link rel="shortcut icon" href="PATA.ico">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="template/MultiLevelMenu-master/css/component.css" />
     <link rel="stylesheet" type="text/css" href="template/MultiLevelMenu-master/css/demo.css" />
