--- a/Animal.html
+++ b/Animal.html
@@ -25,7 +25,7 @@
 		<!-- Blueprint header -->
 		<header class="bp-header cf">
 			<div class="dummy-logo">
-				
+				<!-- aqui vendrian los animales -->
 				<h2 class="dummy-heading">Animales</h2>
 			</div>
 			<div class="bp-header__main">
@@ -40,9 +40,11 @@
 		<nav id="ml-menu" class="menu">
 			<button class="action action--close" aria-label="Close Menu"><span class="icon icon--cross"></span></button>
 			<div class="menu__wrap">
+			    <!-- las categorias que existiras -->
 				<ul data-menu="main" class="menu__level" tabindex="-1" role="menu" aria-label="All">					
                     <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Terrestres</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">Voladores</a></li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="Subir.html">Registrase</a></li>
 					
 			</div>
 		</nav>
