--- a/Main.html
+++ b/Main.html
@@ -30,8 +30,7 @@
                     </div>
                     <div class="column">
                         <nav class="codrops-demos">
-                            <a href="Main.html" class="current-demo">Mover hacia la derecha</a>
-                            <a href="Main2.html">Mover hacia la izquierda</a>
+                            <p>Esta pagina es una wiki de animales hecha por alumnos que mostrara algunos animales que no conozcas y te dara la infromacion de ellos que tu no cepas o no conozcas.</p>
                         </nav>
                     </div>
                 </div><!-- /main -->
@@ -40,7 +39,7 @@
         <nav class="outer-nav left vertical">
 				<a href="Animal.html">Animales</a>
 				<a href="Informacion.html">Informacion</a>
-				<a href="Subir.html">Registrate</a>
+				
 				
 			</nav>
     </div>  
