--- a/Animal.html
+++ b/Animal.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-	<!-- Main container -->
+	<!-- Main container ->
 	<div class="container">
 		<!-- Blueprint header -->
 		<header class="bp-header cf">
